# hr_onboarding_LangGraph

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sonar-project.properties
backend/.github/workflows/: ci.yml
backend/app/agents/: document_agent.py  it_setup_agent.py  manager_notify_agent.py  orientation_agent.py  payroll_agent.py
backend/app/core/: config.py  database.py
backend/app/crud/: employee_crud.py
backend/app/logger/: logger.py
backend/app/models/: employee.py
backend/app/routes/: employee_routes.py
backend/app/schemas/: employee.py  state_schema.py
backend/app/services/: workflow_service.py
backend/migrations/: env.py
